@@ -60,7 +60,8 @@ f <- function(x = 1:2,
     w(names(u$inner)[2:4] <- v[1:2] <- c("X", "Y", "Z", "U")[1:2])
         # quote(`[<-`(names(u$inner), 2:4, value = v[1:2] <- c("X", "Y", "Z", "U")[1:2]))
 
-    e(stopifnot(is.numeric(dummy)))
+    ##_ Not anymore, as stopifnot() massages its error/warning message:
+    ##_ e(stopifnot(is.numeric(dummy)))
 }
 
 old=options()
